--- a/lp-pre-venda/index.html
+++ b/lp-pre-venda/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>B3 GYM | Pré-Venda Exclusiva</title>
+    <title>B3 GYM - A Maior de Mafra</title>
+    <link rel="icon" href="../assets/favicon.png" type="image/png">
     <meta name="description" content="Garanta sua vaga na B3 GYM com condições exclusivas de pré-venda.">
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -26,12 +27,23 @@
                     <li><a href="#inicio">Início</a></li>
                     <li><a href="#planos">Planos</a></li>
                     <li><a href="#estrutura">Estrutura</a></li>
+                    <li><a href="#depoimentos">Depoimentos</a></li>
+                    <li><a href="#contato">Contato</a></li>
                 </ul>
             </nav>
-            <div class="nav-cta">
+            <div class="nav-cta desktop-only">
                 <a href="#planos" class="cta-btn-header">PRÉ-VENDA</a>
             </div>
+
+            <!-- Mobile Menu Trigger -->
+            <button class="hamburger" aria-label="Abrir menu">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </button>
         </div>
+
+
     </header>
 
     <main>
@@ -40,7 +52,7 @@
             <div class="slide-container">
                 <div class="slide active">
                     <div class="slide-content">
-                        <h1 class="reveal-text">PRÉ-VENDA ABERTA</h1>
+                        <h1 class="reveal-text">PRÉ-VENDA<br>ABERTA</h1>
                         <p class="reveal-line">Transforme sua rotina na melhor estrutura de Mafra.</p>
                     </div>
                     <div class="slide-bg"
@@ -157,22 +169,168 @@
                 </div>
             </div>
         </section>
+        </section>
+
+        <!-- Section: Depoimentos -->
+        <section id="depoimentos" class="testimonials-section">
+            <div class="section-container">
+                <h2 class="section-title">O QUE DIZEM</h2>
+                <div class="testimonials-grid">
+                    <div class="testimonial-card">
+                        <div class="quote-icon">❝</div>
+                        <p class="testimonial-text">"A melhor estrutura que já vi em Mafra. O ambiente industrial te
+                            motiva a treinar pesado. Incrível!"</p>
+                        <div class="testimonial-author">
+                            <div class="author-avatar"
+                                style="background-image: url('https://randomuser.me/api/portraits/men/32.jpg')"></div>
+                            <div class="author-info">
+                                <h4>Carlos Mendes</h4>
+                                <span>Aluno Fundador</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="testimonial-card">
+                        <div class="quote-icon">❝</div>
+                        <p class="testimonial-text">"Treinar na B3 é uma experiência única. Equipamentos de ponta e um
+                            visual que não dá vontade de ir embora."</p>
+                        <div class="testimonial-author">
+                            <div class="author-avatar"
+                                style="background-image: url('https://randomuser.me/api/portraits/women/44.jpg')"></div>
+                            <div class="author-info">
+                                <h4>Fernanda Souza</h4>
+                                <span>Plano 02</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="testimonial-card">
+                        <div class="quote-icon">❝</div>
+                        <p class="testimonial-text">"Espaço amplo, climatizado e com profissionais excelentes. A
+                            pré-venda valeu muito a pena!"</p>
+                        <div class="testimonial-author">
+                            <div class="author-avatar"
+                                style="background-image: url('https://randomuser.me/api/portraits/men/85.jpg')"></div>
+                            <div class="author-info">
+                                <h4>Ricardo Alves</h4>
+                                <span>Aluno Fundador</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        </section>
+
+        <!-- Section: Contato -->
+        <section id="contato" class="contact-section">
+            <div class="section-container">
+                <h2 class="section-title">LOCALIZAÇÃO</h2>
+                <div class="contact-grid">
+                    <div class="contact-info">
+                        <div class="info-item">
+                            <h3>ONDE ESTAMOS</h3>
+                            <p>Rua Exemplo, 123 - Centro<br>Mafra - SC</p>
+                        </div>
+                        <div class="info-item">
+                            <h3>HORÁRIO</h3>
+                            <p>Seg - Sex: 05h às 23h<br>Sáb - Dom: 08h às 18h</p>
+                        </div>
+                        <div class="info-item">
+                            <h3>CONTATO</h3>
+                            <p>WhatsApp: (47) 99999-9999<br>Email: contato@b3gym.com.br</p>
+                        </div>
+                        <a href="https://wa.me/5547999999999" target="_blank" class="cta-btn-contact">FALAR NO
+                            WHATSAPP</a>
+                    </div>
+                    <div class="map-container">
+                        <!-- Placeholder Map Image using Generate Image concept or external placeholder -->
+                        <div class="map-placeholder">
+                            <span>MAPA DA LOCALIZAÇÃO</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer class="footer">
         <div class="footer-container">
-            <div class="footer-logo">
-                <img src="../assets/Group.png" alt="B3 GYM Logo">
+            <!-- Top Section: Logo & Socials -->
+            <div class="footer-top">
+                <img src="../assets/Group.png" alt="B3 GYM Logo" class="footer-logo-main">
+                <p class="footer-slogan">A estrutura mais completa de Mafra para transformar seu corpo e sua mente.</p>
+                <div class="footer-social-row">
+                    <a href="https://instagram.com/b3gymoficial" target="_blank" aria-label="Instagram">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect>
+                            <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path>
+                            <line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line>
+                        </svg>
+                    </a>
+                    <a href="https://wa.me/5547999999999" target="_blank" aria-label="WhatsApp">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <path
+                                d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z">
+                            </path>
+                        </svg>
+                    </a>
+                </div>
             </div>
-            <div class="footer-social">
-                <a href="https://instagram.com/b3gymoficial" target="_blank">@b3gymoficial</a>
+
+            <hr class="footer-divider">
+
+            <!-- Bottom Section: Links Columns -->
+            <div class="footer-columns">
+                <div class="footer-col">
+                    <h4>NAVEGAÇÃO</h4>
+                    <ul>
+                        <li><a href="#inicio">Início</a></li>
+                        <li><a href="#estrutura">Estrutura</a></li>
+                        <li><a href="#contato">Localização</a></li>
+                    </ul>
+                </div>
+
+                <div class="footer-col footer-plans-col">
+                    <h4>PLANOS</h4>
+                    <ul>
+                        <li><a href="#planos">PLANOS 01</a></li>
+                        <li><a href="#planos">PLANOS 02</a></li>
+                    </ul>
+                </div>
+
+                <div class="footer-col">
+                    <h4>CONTATO</h4>
+                    <p>Rua Exemplo, 123 - Centro<br>Mafra - SC</p>
+                    <p>contato@b3gym.com.br</p>
+                    <p>(47) 99999-9999</p>
+                </div>
             </div>
-            <div class="footer-bottom">
-                <p>&copy; 2026 B3 GYM - Todos os direitos reservados.</p>
-            </div>
+        </div>
+
+        <div class="footer-bottom-bar">
+            <p>&copy; 2026 B3 GYM. Todos os direitos reservados.</p>
         </div>
     </footer>
 
+    <!-- Mobile Menu Moved to Body -->
+    <div class="mobile-menu">
+        <div class="mobile-nav" id="sidebar-menu"
+            style="background-color: #000000 !important; opacity: 1 !important; z-index: 99999 !important;">
+            <div class="mobile-menu-header">
+                <img src="../assets/Group.png" alt="B3 GYM" class="mobile-logo">
+                <button class="close-menu" aria-label="Fechar menu">&times;</button>
+            </div>
+            <ul>
+                <li><a href="#inicio" class="mobile-link">Início</a></li>
+                <li><a href="#planos" class="mobile-link">Planos</a></li>
+                <li><a href="#estrutura" class="mobile-link">Estrutura</a></li>
+                <li><a href="#depoimentos" class="mobile-link">Depoimentos</a></li>
+                <li><a href="#contato" class="mobile-link">Contato</a></li>
+            </ul>
+            <a href="#planos" class="cta-btn-mobile mobile-link">GARANTIR VAGA</a>
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 
