fix: Move files to root for GitHub Pages deployment

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header class="navbar">
         <div class="nav-container">
             <div class="logo-area">
-                <img src="../assets/Group.png" alt="B3 GYM Logo" class="nav-logo">
+                <img src="assets/Group.png" alt="B3 GYM Logo" class="nav-logo">
             </div>
             <nav class="menu">
                 <ul>
@@ -256,7 +256,7 @@
         <div class="footer-container">
             <!-- Top Section: Logo & Socials -->
             <div class="footer-top">
-                <img src="../assets/Group.png" alt="B3 GYM Logo" class="footer-logo-main">
+                <img src="assets/Group.png" alt="B3 GYM Logo" class="footer-logo-main">
                 <p class="footer-slogan">A estrutura mais completa de Mafra para transformar seu corpo e sua mente.</p>
                 <div class="footer-social-row">
                     <a href="https://instagram.com/b3gymoficial" target="_blank" aria-label="Instagram">
@@ -318,7 +318,7 @@
         <div class="mobile-nav" id="sidebar-menu"
             style="background-color: #000000 !important; opacity: 1 !important; z-index: 99999 !important;">
             <div class="mobile-menu-header">
-                <img src="../assets/Group.png" alt="B3 GYM" class="mobile-logo">
+                <img src="assets/Group.png" alt="B3 GYM" class="mobile-logo">
                 <button class="close-menu" aria-label="Fechar menu">&times;</button>
             </div>
             <ul>
