feat: Update branding (Green Accent, Outfit Font, Footer Logo V2)

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Montserrat:wght@300;400;600&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700;800&family=Nunito+Sans:wght@300;400;600;700;800&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -256,7 +256,7 @@
         <div class="footer-container">
             <!-- Top Section: Logo & Socials -->
             <div class="footer-top">
-                <img src="assets/Group.png" alt="B3 GYM Logo" class="footer-logo-main">
+                <img src="assets/LOGO HORIZONTAL 2.png" alt="B3 GYM Logo" class="footer-logo-main">
                 <p class="footer-slogan">A estrutura mais completa de Mafra para transformar seu corpo e sua mente.</p>
                 <div class="footer-social-row">
                     <a href="https://instagram.com/b3gymoficial" target="_blank" aria-label="Instagram">
