fix: Update background image path for root directory

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         <p class="reveal-line">Transforme sua rotina na melhor estrutura de Mafra.</p>
                     </div>
                     <div class="slide-bg"
-                        style="background-image: linear-gradient(rgba(10, 10, 10, 0.6), rgba(10, 10, 10, 0.8)), url('../assets/Group.jpg');">
+                        style="background-image: linear-gradient(rgba(10, 10, 10, 0.6), rgba(10, 10, 10, 0.8)), url('assets/Group.jpg');">
                     </div>
                 </div>
                 <!-- Outros slides podem ser adicionados via JS ou HTML -->
